<resources>
    <string name="app_name">AppCar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_map_key">AIzaSyDKOfpz38nXnxMAF9ddgGEsvj96MUJnCpo</string>
    <string name="image_type_car">image_type_car</string>
    <string name="hint_search_notice_board">Tìm biển báo giao thông</string>
    <string name="search">Tìm kiếm</string>
    <string name="retry">Thử lại</string>
    <string name="data_empty">Dữ liệu trống</string>
    <string name="add">Thêm</string>
    <string name="title_result_count_notice_board">Có %1$s kết quả tìm thấy</string>
    <string name="value_code_of">Số hiệu: %1$s</string>
    <string name="label_other">Khác</string>
    <string name="submit">Gửi</string>
    <string name="input_title">Nhập tiêu đề</string>
    <string name="title">Tiêu đề</string>
    <string name="content">Nội dung</string>
    <string name="hint_input_feedback">Nhập ý kiến tại đây</string>
</resources>